Bug 136787 - FILEOPEN: Incorrect Shadow shape with Glow effect
Summary: FILEOPEN: Incorrect Shadow shape with Glow effect
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Shapes
  Show dependency treegraph
 
Reported: 2020-09-15 19:37 UTC by Xisco Faulí
Modified: 2022-06-15 12:46 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.1 master (15.65 KB, image/png)
2020-09-15 19:37 UTC, Xisco Faulí
Details
Screenshot with LO 7.4 alpha1 including that patch (38.96 KB, image/png)
2022-06-10 11:48 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-09-15 19:37:11 UTC
Created attachment 165549 [details]
Comparison MSO 2010 and LibreOffice 7.1 master

Steps to reproduce:
1. Open attachment 135569 [details] from bug 111838

-> The shadow is bigger than expected. See comparison image

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 6f1e02c96b887750f974c187a82ecd6236e6a435
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-09-15 19:38:10 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b435c4fe82e77a82fde6464d6722281e5fc4f394

author	A_GAN <ganzouri97@gmail.com>	2020-06-08 21:36:34 +0200
committer	Tomaž Vajngerl <quikee@gmail.com>	2020-06-15 11:55:53 +0200
commit b435c4fe82e77a82fde6464d6722281e5fc4f394 (patch)
tree c19cffeaae1ed9e17663f908e29020adbd1696f8
parent 5d8f2c1eda5583dd89dcd1d03cbd38ddb68ad273 (diff)
Add process function to create the blur shadow

Bisected with: bibisect-linux64-7.1

Adding Cc: to A_GAN
Comment 2 BogdanB 2021-07-31 05:26:24 UTC
Also in
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 5aa74aa1e6fac571f99146ebcb6adc9feb1459ad
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-07-28_19:35:14
Calc: threaded
Comment 3 Regina Henschel 2021-07-31 11:19:52 UTC
Problem is, that transparency and rounded corner of the glow effect are different in LO and PowerPoint.
Comment 4 Commit Notification 2022-06-03 08:17:11 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a658129012f1d183f95f8bf5dd6d7ff6926cd495

tdf#136787 Add control to create 1-bit B&W bitmap while creating mask.

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-06-06 07:39:48 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/7eb4f92ed90e13ce5cbf7286fae623770e71324c

tdf#136787 Add control to create 1-bit B&W bitmap while creating mask.

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gerald Pfeifer 2022-06-10 11:48:18 UTC
Created attachment 180664 [details]
Screenshot with LO 7.4 alpha1 including that patch

It looks like this indeed addresses the issue reported.

-> Xisco, are you happy with the result, too?


(I'm wondering whether the corners show with a somewhat smaller radius
in LO vs 365, but that appears unrelated.)


Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: 66b1ebd4ddc7127a923bf81eb569e7f99dd52022
CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Comment 7 Gerald Pfeifer 2022-06-10 11:50:51 UTC
I noticed the commit didn't come with a testcase.

Gülşah, are you planning to add one?
Xisco, is that reasonably possible for a situation like this?
Comment 8 Andras Timar 2022-06-15 11:13:15 UTC
(In reply to Gerald Pfeifer from comment #7)
> I noticed the commit didn't come with a testcase.
> 
> Gülşah, are you planning to add one?
> Xisco, is that reasonably possible for a situation like this?

Gerald, writing a unit test for a visual problem like this is often problematic.
Comment 9 Xisco Faulí 2022-06-15 11:17:24 UTC
(In reply to Gerald Pfeifer from comment #7)
> I noticed the commit didn't come with a testcase.
> 
> Gülşah, are you planning to add one?
> Xisco, is that reasonably possible for a situation like this?

Hi Gerald,
I tried a few approaches but I couldn't find a way to test it
Comment 10 Gerald Pfeifer 2022-06-15 12:46:19 UTC
(In reply to Andras Timar from comment #8)
> Gerald, writing a unit test for a visual problem like this is often
> problematic.

(In reply to Xisco Faulí from comment #9)
> I tried a few approaches but I couldn't find a way to test it

Thank you for looking into it, Andras and Xisco.  I figured that
might be the case - but worth a try.

And IIUC office-interoperability-tools are still there as a safety
net...